ISSUES  - The header image was not responsive on different devices width size  FIX  - I had to set a min-width and min-width property to the image container to make it fit
 OTHERS
 - The webpage layout has been achieved and completed

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
     font-family: 'Segoe UI', Tahoma, 'Geneva', Verdana, sans-serif;
-   
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+    max-width: 100vw;
 }
 
 .header {
@@ -99,15 +103,14 @@ ul {
     align-items: center;
     gap: 30px;
     padding-left: 0px;
-    text-align: center;
+    text-align: left;
 }
 
 /* SOLUTION */
 
 body {
-    width: 100%;
+ 
     margin: 0px;
-
 }
 
 .header {
@@ -115,6 +118,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    flex: 1;
 }
 
 .top-header {
@@ -122,36 +126,138 @@ body {
     align-items: center;
     flex-wrap: wrap;  
     justify-content: space-between;
-    flex: 1 1 80%;
-    width: 80%;
- 
+    width: 75%;
+    margin-bottom: 80px;
+    margin-top: 10px;
 }
 
 .bottom-header {
-    display: flex;
+    display: inline-flex;
+    width: 75%;
+    margin-bottom: 70px;
     justify-content: space-between;
-    width: 80%;
-    flex: 1 1 80%;
-    gap: 50px;
+    flex-wrap: wrap;
+    gap: 10px;
+    flex: 1;
+    align-content: center;
+    gap: 40px;
 }
 
 .text-header {
-    display: flex;
-    flex-direction: column;
+    min-width: 40%;
+    max-width: 320px;
 }
 
 .header-image {
-    display: inline-flex;
-    width: 1000px;
-    height: 250px;
-    flex: ;
-}
-
-.text-header button {
-    margin-top: 10px;
+    display: flex;
+    min-width: 55%;
+    max-width: 100%;
+    flex: 1 1 55%;
 }
 
 .header-image img {
     width: 100%;
-    object-fit: fill;
+    height: 80%;
+}
+
+
+.text-header button {
+    margin-top: 30px;
+}
+
+
+
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    flex: 1;
+}
+
+.container .information {
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.container .image {
+    display: flex;
+    text-align: justify;
+    justify-content: space-around;
+    width: 65%;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin-bottom: 100px;
+}
+
+.text-image {
+    text-align: center;
+
+}
+
+.image-with-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: fit-content;
+    flex: 1 1 200px;
+}
+
+.image-with-text img{
+    border-style: solid;
+    border-color: blue;
+    border-radius: 20px;
+    width: 200px;
+    height: 150px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex: 1;
+}
+
+.quote .main {
+    width: 60%;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.quote .secondary {
+    width: 60%;
+    text-align: end;
+    margin-top: 5px;
+}
+
+.action {
+    display: flex;
+    width: 75%;
+    justify-content: center ;
+    margin-top: 80px;
+    margin-bottom: 80px;
+    padding: 40px 0px;
+    border-radius: 10px;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-between;
+    gap: 30px;
+}
+
+.instructions {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.footer {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
